<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/disconnect_device_table_layout">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/testview_connected_device_name"
            android:id="@+id/textView"
            android:textStyle="bold"
            android:textSize="@dimen/textview_size_20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/default_device_name_unknown"
            android:id="@+id/disconnect_device_name"
            android:textStyle="italic"
            android:gravity="center"
            android:layout_gravity="right"
            android:layout_marginLeft="10dp"
            android:textColor="@color/DarkGreen"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/testview_device_address"
            android:id="@+id/textView3"
            android:editable="false"
            android:textStyle="bold"
            android:textSize="@dimen/textview_size_20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/default_device_address_unknown"
            android:id="@+id/disconnect_device_address"
            android:layout_marginLeft="10dp"
            android:layout_gravity="right"
            android:gravity="center"
            android:textStyle="italic"
            android:textColor="@color/DarkGreen"/>
    </TableRow>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnect_button_string"
        android:id="@+id/start_disconnect_device_button"
        android:textColor="@color/Black" />

</TableLayout>